[package]
name = "compre_combinee"
version = "0.1.2"
authors = ["madwareru <madware.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc_monadde_macro_combinee = { git = "https://github.com/madwareru/proc_monadde_macro_combinee", version = "0.1.2" }